--- a/tongkexin.html
+++ b/tongkexin.html
@@ -24,8 +24,8 @@
 	有事说，但我可能回消息回的非常晚，勿生气。拜拜<br/>
 	
 	<p>
-		这段话我没算在字数内，这篇文章写于2020年10月3日，我也不知道为什么我要写这篇文章，这篇文章全地球人都有机会看到，但没人会对这篇文章感兴趣包括你也有可能，这篇文章的网址是<a href="y1772482180.github.io/tongkexin.html">y1772482180.github.io/tongkexin.html</a>这个网址中<br>
-		我会把这篇文章存在我的<a href="y1772482180.github.io">个人博客</a>上很久很久甚至直到github消失的那一天，我的个人博客是"y1772482180.github.io。百度不会检索到你的名字，你可以放心。我会把这篇文章在10.3日上传，但这个网址我会在我们分开当天晚上给你，我认为那是最好的时间。<br>
+		这段话我没算在字数内，这篇文章写于2020年10月3日，我也不知道为什么我要写这篇文章，这篇文章全地球人都有机会看到，但没人会对这篇文章感兴趣包括你也有可能，我会存在<a href="y1772482180.github.io/tongkexin.html">y1772482180.github.io/tongkexin.html</a>这个网址中<br>
+		我也会把这篇文章存在我的<a href="y1772482180.github.io">个人博客</a>上很久很久甚至直到github消失的那一天，我的个人博客是"y1772482180.github.io。百度不会检索到你的名字，你可以放心。我会把这篇文章在10.3日上传，但这个网址我会在我们分开当天晚上给你，我认为那是最好的时间。<br>
 		
 		我写这篇文章只是想表达我此时的伤心，痛苦和对前同桌的歉意，你可能认为这样的文章没有必要，你可能想高中还有两年，写这玩意有什么用，我突然想起了那一天我对你说过的话，必要的仪式感是一定要有的，不是吗？<br>
 		这是我第一次给前同桌写这种东西，这也可能是最后一次给我的同桌写这种东西，不管是过去还是将来...
